syntax = "proto3";

package agui.v1;

import "google/protobuf/struct.proto";

option go_package = "agent-go-ag-ui/gen/agui/v1";

// Message represents an AG-UI message
message Message {
  string id = 1;
  string role = 2;
  google.protobuf.Value content = 3;
  string name = 4;
  google.protobuf.Value tool_calls = 5;
}

// Tool defines a tool that can be called by an agent
message Tool {
  string name = 1;
  string description = 2;
  google.protobuf.Struct parameters = 3;
}

// Context represents a piece of contextual information provided to an agent
message Context {
  string description = 1;
  string value = 2;
}

// RunAgentInput represents the input for running an agent
message RunAgentInput {
  string thread_id = 1;
  string run_id = 2;
  string parent_run_id = 3;
  google.protobuf.Struct state = 4;
  repeated Message messages = 5;
  repeated Tool tools = 6;
  repeated Context context = 7;
  google.protobuf.Struct forwarded_props = 8;
}

// AGUIEvent represents any AG-UI protocol event
// Using Struct to allow flexible event representation
message AGUIEvent {
  // The event type (e.g., "run_started", "text_message_content", etc.)
  string type = 1;
  
  // The event data as a flexible struct
  google.protobuf.Struct data = 2;
}

// AGUIService provides the Connect RPC interface for AG-UI protocol
service AGUIService {
  // RunAgent executes an agent and streams AG-UI events
  rpc RunAgent(RunAgentInput) returns (stream AGUIEvent);
}

